--- a/client/widgets/checkValue/src/edit/edit.html
+++ b/client/widgets/checkValue/src/edit/edit.html
@@ -31,7 +31,7 @@
         <input id="tooltip" type="text" class="form-control" ng-model="config.desc" placeholder="Tooltips">
       </div>
       <div class="form-group">
-        <label class="sr-only" for="sample">Donnée</label>
+        <label for="sample">Donnée</label>
         <input type="text" class="form-control" ng-model="config.root" placeholder="Enter name of principal data" uib-typeahead ="key for key in config.keys" typeahead-min-length=0 autocomplete="off">
       </div>
     </div>
