--- a/client/widgets/pieChart/src/edit/edit.html
+++ b/client/widgets/pieChart/src/edit/edit.html
@@ -60,6 +60,8 @@
       <query-builder  group="config.condition2.group" fields="config.otherCol" database="config.databaseStandard"></query-builder>
     </div>
 
+    <showsql type="pie" config="config"></showsql>
+
   </div>
 
   <!-- Mode Expert -->
@@ -124,7 +126,7 @@
       <label for="legend"> Legende </label>
     </div>
 
-    <div>
+    <!-- <div>
       <label> Position de la Legende </label>
     </div>
     <select ng-model=config.legendPosition>
@@ -132,8 +134,7 @@
       <option value="bottom"> Bas </option>
       <option value="left"> Gauche </option>
       <option value="right"> Droite </option>
-    </select>
-
+    </select> -->
 
     <div>
       <input type="checkbox" ng-model="config.pourcent" id="pouc"></input>
@@ -147,16 +148,28 @@
 
     <label> Choix des Couleurs </label>
 
-    <div ng-if="config.colorLabel" ng-repeat="l in config.colorLabel">
+    <!-- <div ng-if="config.colorLabel" ng-repeat="l in config.colorLabel">
       <label> {{l}} </label>
       <color-picker ng-model="config.color[$index]" options="{format : 'hexString'}"></color-picker>
+    </div> -->
 
+    <div ng-repeat="l in config.colorLabel" ng-if="config.colorLabel && $index % 2 == 0" class="row">
+      <div class="col-md-6">
+        <label for="color"> {{l}} : </label>
+        <color-picker ng-model="config.color[$index]" options="{required : false, format : 'hexString'}"></color-picker>
+      </div>
+
+      <div class="col-md-6" ng-if="config.colorLabel.length > $index +1" >
+        <label for="color"> {{config.colorLabel[$index +1]}} : </label>
+        <color-picker ng-model="config.color[$index+1]" options="{required : false, format : 'hexString'}"></color-picker>
+      </div>
     </div>
-
-    <!-- <div>
+    <div>
       <input type="checkbox" ng-model="config.v3d" id="v3d"></input>
       <label for="v3d"> 3D </label>
-    </div> -->
+    </div>
+  </div>
+
 
 
   </div>
