--- a/client/widgets/gaugeChart/src/edit/edit.html
+++ b/client/widgets/gaugeChart/src/edit/edit.html
@@ -43,6 +43,8 @@
   </div>
 
   <input ng-if="config.mode == 'easy'" id=listener type="checkbox" ng-model="config.listener"> <label ng-if="config.mode == 'easy'" for=listener> Slave </label>
+  <input type=checkbox id=master ng-model=config.master> <label for="master"> Master </label>
+
 
   <div ng-if="config.listener">
     <label> Master Column </label>
@@ -161,6 +163,40 @@
       </button>
     </div>
 
+
+
   </div>
+
+  <div>
+    <label ng-click="isCollapsed3 = !isCollapsed3"> Paramètre Optionnel
+      <span ng-hide="isCollapsed3" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+      <span ng-show="isCollapsed3" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+    </label>
+  </div>
+
+  <div ng-show="isCollapsed3">
+
+    <div>
+      <label for="field"> Column to populate </label>
+    </div>
+
+    <div class="form-inline padding-bottom" ng-repeat="c in graph.config.colToPop">
+      <div class="form-group">
+          <input type=text id="field" autocomplete="off" uib-typeahead="key for key in config.key"  typeahead-min-length='0' ng-model="c.name"></select>
+      </div>
+      <button type="button" class="btn btn-warning" ng-click="graph.removeColToPop($index)">
+        <i class="fa fa-minus"></i> Remove
+      </button>
+    </div>
+
+    <button type="button" class="btn btn-primary" ng-click="graph.addColToPop()">
+      <i class="fa fa-plus"></i> Add
+    </button>
+
+    <hr>
+
+    <div> <label> Modal Configuration </label> </div>
+
+    <modal-config config=config.modal></modal-config>
 
 </form>
