correction modal issue

--- a/client/widgets/gaugeChart/src/edit/edit.html
+++ b/client/widgets/gaugeChart/src/edit/edit.html
@@ -195,6 +195,10 @@
 
     <hr>
 
+    <my-link config="config"></my-link>
+
+    <hr>
+
     <div> <label> Modal Configuration </label> </div>
 
     <modal-config config=config.modal></modal-config>
