--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -92,6 +92,9 @@
       <label for="opt3-{{$index}}">Pourcentage</label>
       <input type="radio" id="opt3-{{$index}}" class="" ng-model="col.opt.type" value="pourcent">
 
+      <label for="opt4-{{index}}"> Date </label>
+      <input type="radio" id="opt4-{{index}}" class="" ng-model="col.opt.type" value="date">
+
     </div>
 
     <div class="form-inline padding-bottom" ng-if="col.opt.type =='pourcent'">
@@ -107,6 +110,18 @@
       </select>
       <input type=text ng-model=col.opt.seuilVal>
     </div>
+
+    <div class="form-inline padding-bottom" ng-if="col.opt.type == 'date'">
+      <label for="format"> Format de la Date </label>
+      <select ng-model=col.opt.dateFormat>
+        <option value="DD-MM-YYYY"> Day - Month - Year </option>
+        <option value="DD-MMM"> Day - Month </option>
+        <option value="DD-HH"> Day </option>
+        <option value="X"> Timestamp </option>
+      </select>
+    </div>
+
+
 
 
     <button type="button" class="btn btn-warning" ng-click="pt.removeColumn(false, $index)">
@@ -129,12 +144,22 @@
     <input type="checkbox" id=filter ng-model=config.filter> <label for=filter> Cacher le Filtre </label>
   </div>
   <div>
+    <label for="clear"> Effacer les colonnes à chaque chargement </label>
+    <input type="checkbox" ng-model=config.clear id=clear>
+  </div>
+  <div>
     <label> Pagination </label>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="maxSize"> Nombre d'Elément par Page </label>
     <input type="text" id="maxSize" class="form-control" placeholder="Nombre d'élément par pages" ng-model="config.itemPerPage">
+  </div>
+
+  <div class="form-group">
+    <p>Si vous avez choissis un type date pour une colonne veuillez spécifier le format de la date de la BDD </p>
+    <label class=ctm-label for=df> Format </label>
+    <input type="text" placeholder="Par Default : YYYY-MM-DDTHH:mm:ssZ" ng-model=config.dateFormat>
   </div>
 
 <!-- MODAL -->
@@ -148,63 +173,37 @@
 
   <div ng-show="isCollapsed">
 
+
+    <hr>
+
     <div>
-      <label for="clear"> Effacer les colonnes à chaque chargement </label>
-      <input type="checkbox" ng-model=config.clear id=clear>
+      <label for="field"> Column to populate </label>
+
     </div>
 
-      <div >
-        <label for="sample">Modal URL</label>
-        <div ng-show="config.modalUrl" class="alert alert-info text-center" ng-bind-html="config.modalUrl">
-        </div>
-        <selecttree model="config.modalDatasource"> </selecttree>
+    <div class="form-inline padding-bottom" ng-repeat="c in pt.config.colToPop">
+      <div class="form-group">
+          <input type=text id="field" autocomplete="off" uib-typeahead="key for key in config.keys"  typeahead-min-length='0' ng-model="c.name"></select>
       </div>
-
-      <hr>
-
-      <div>
-        <label for="field"> Column to populate </label>
-
-      </div>
-
-      <div class="form-inline padding-bottom" ng-repeat="c in pt.config.colToPop">
-        <div class="form-group">
-            <input type=text id="field" autocomplete="off" uib-typeahead="key for key in config.keys"  typeahead-min-length='0' ng-model="c.name"></select>
-        </div>
-        <button type="button" class="btn btn-warning" ng-click="pt.removeColToPop($index)">
-          <i class="fa fa-minus"></i> Remove
-        </button>
-      </div>
-
-      <button type="button" class="btn btn-primary" ng-click="pt.addColToPop()">
-        <i class="fa fa-plus"></i> Add
+      <button type="button" class="btn btn-warning" ng-click="pt.removeColToPop($index)">
+        <i class="fa fa-minus"></i> Remove
       </button>
+    </div>
+
+    <button type="button" class="btn btn-primary" ng-click="pt.addColToPop()">
+      <i class="fa fa-plus"></i> Add
+    </button>
 
 
-      <hr>
+    <hr>
 
-      <div>
-        <label>Column</label>
-      </div>
+    <my-link config=config></my-link>
 
-      <div class="form-inline padding-bottom" ng-repeat="modalCol in pt.config.modalColumns">
-        <div class="form-group">
-          <label class="ctm-label" for="modalTitle-{{$index}}" data-placeholder="Titre">Nom de la Colonne : </label>
-          <input type="text" id="modalTitle-{{$index}}" class="form-control" placeholder="Title" ng-model="modalCol.title" required="">
-        </div>
-        <div class="form-group">
-          <label class="ctm-label" for="modalPath-{{$index}}" data-placeholder="Path">Chemin d'accès</label>
-          <input type="text" id="modalPath-{{$index}}" class="form-control" placeholder="Path" ng-model="modalCol.path" required="">
-        </div>
-        <br>
-        <button type="button" class="btn btn-warning" ng-click="pt.removeColumn(true, $index)">
-          <i class="fa fa-minus"></i> Remove
-        </button>
-      </div>
+    <hr>
 
-      <button type="button" class="btn btn-primary" ng-click="pt.addColumn(true)">
-        <i class="fa fa-plus"></i> Add
-      </button>
+    <label> Modal Configuration </label>
+    <modal-config config=config> </modal-config>
+
   </div>
 
 
